--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description              : "매일 또다른 발전을..."
 url                      : "https://hyelmy.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : "\assets\images\hyelmy.jpg"
+teaser                   : "/assets/images/hyelmy.jpg"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "혤마이니"
-  avatar           : "\assets\images\hyelmy.jpg"
+  avatar           : "/assets/images/hyelmy.jpg"
   bio              : "매일 또다른 발전을...!"
   location         : "South Korea"
   email            :
