--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Hyelmy's Blog"
+title                    : "Hyelmy's Coding Blog"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+subtitle                 : "열심히 코딩하자"
 name                     : "혤마이니의 코딩 블로그"
 description              : "매일 또다른 발전을..."
 url                      : "https://hyelmy.github.io"
